# django_react_sample_app

./: .gitignore  manage.py  pyproject.toml
backend/: pyproject.toml
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_remove_question_is_right_answer_is_right.py  0003_alter_answer_question.py
backend/api/serializers/: answer_serializer.py  question_serializer.py  quiz_serializer.py
backend/django_react_sample/: settings.py  urls.py
django_react_sample/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: babel.config.json  index.html  package-lock.json  package.json  tailwind.config.js  urls.py  webpack.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: App.js  Cursor.jsx  Footer.jsx  Nav.jsx  QuizCard.jsx
frontend/src/pages/: Home.jsx  Quizzes.jsx
frontend/static/frontend/: main.js
frontend/templates/frontend/: index.html
