[tool.poetry]
name = "django-react-sample-app"
version = "0.1.0"
description = "Boilerplate code for setting up a Django + React + Tailwind project"
authors = ["hydrohd <eddy@edesc.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
