[tool.poetry]
name = "django-react-sample-app"
version = "0.1.0"
description = "Boilerplate code for setting up a Django + React + Tailwind project"
authors = ["hydrohd <eddy@edesc.dev>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.8"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.3.1"
django-autoslug = "^1.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
